# Tracking

./: .gitignore  LICENSE  README.md
cpp/HybridEstimator/: Association.cpp  Association.hpp  Association.hpp~RF74e74e.TMP  BaseBayesianFilter.cpp  BaseBayesianFilter.hpp  BaseBayesianTracker.cpp  BaseBayesianTracker.hpp  BaseDataAssociator.hpp  BaseKalmanFilter.cpp  BaseKalmanFilter.hpp  BaseMoT.hpp  BaseObjectTracker.hpp  BaseTracker.cpp  BaseTracker.hpp  BaseTrackerManager.hpp  BayesianTracker.cpp  BayesianTracker.hpp  CMakeLists.txt  Comparator.cpp  Comparator.hpp  Detection.hpp  HungarianAssociator.cpp  HungarianAssociator.hpp  HungarianFunctions.cpp  HybridEstimator.cpp  HybridEstimator.hpp  KalmanFilter.cpp  KalmanFilter.hpp  Kfutils.cpp  Kfutils.hpp  MMAE.cpp  MMAE.hpp  MMAEItem.cpp  MMAEItem.hpp  MMBankItem.cpp  MMBankItem.hpp  MultiObjectTracker.hpp  Object.hpp  PeopleTrackerWithMMAE.hpp  Person3dBVT.cpp  (+4 more)
cpp/HybridEstimator/tests/: main.cpp
matlab/: Main_MOT.m  MoTtest.asv  MoTtest.m  REP_TESTS.m  calculatePointsOnWorldFrame.m  computeMeasurementStatistics.asv  computeMeasurementStatistics.m  data.mat  extractBVT_interface.cpp  extractBVT_interface.mexw64  gt_lab_6p.txt  initilizeKalmans.m  loadData.asv  loadData.m  loadNoisyFromCPP.m  performMMAE.m  readCamParamsCI.asv  readCamParamsCI.m  readCameraParameters.m  reprojectPointsAndDraw.m  resPoints.mat  simpleTest.m  teste.m  teste.m~  testeMEX.asv  testeMEX.m  testeMMAE_mex.asv  testeMMAE_mex.m  thornton.m  thornton.m~  thornton_mine.m  thornton_mine.m~  tracked.mat
tmp/: test.py  test.py~
(+58 files in other folders)
